@@ -139,6 +139,7 @@ Release 0.19.0 - Unreleased
    HBASE-1114  Weird NPEs compacting
    HBASE-1116  generated web.xml and svn don't play nice together
    HBASE-1119  ArrayOutOfBoundsException in HStore.compact
+   HBASE-1121  Cluster confused about where -ROOT- is
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
